          the start and end points fall within the adjusted range.
          
20070108: Applied patch #1630165 - chartobjects.html - thanks to loh_tar for the patch.

20070109: Added an exchange field to charts.

20070111: Fixed bug #1633007 - Yahoo Quotes, Error after add new Stock.

20070125: Yahoo has changed the historical date format to YYYY-MM-DD and now mixes the old and new randomly it appears.
          Yahoo plugin now handles both formats.

20070125: Applied patch #1640810 - Chart fixed at the right hand side - thanks to loh_tar for the patch

20070125: Applied patch #1637852 - new icon offer for "delete group" - thanks to loh_tar for the patch

20070130: Applied patch #1647204 - fix back psButton - thanks to loh_tar for the patch

20070130: Applied patch #1645115 - some IndicatorPlot Modifications - thanks to loh_tar for the patch.

20070130: Applied patch #1646038 - restore NavAreaSize - thanks to loh_tar for the patch.

20070130: Applied patch #1646591 - add preference color buttons to COs - thanks to loh_tar for the patch.

20070130: Applied patch #1646862 - rest COs Edit Dialogs - thanks to loh_tar for the patch.

20070202: Applied patch #1650181 - update dev docs - thanks to loh_tar for the patch.

20070202: Applied patch #1650119 - restore nav panel properly - thanks to loh_tar for the patch.

20070202: Applied patch #1649368 - added identifier info to buy/sellarrow chart objects - thanks to xley for the patch.

20070203: Upgraded ta-lib to version 0.3. ta-lib is using configure and has changed to a shared library, so we have to remove
          ta-lib from the qtstalker source and compile and install it as a separate package. This will be better for 
          the distribution maintainers as well.

20070203: Changed all the installation paths from /usr/* to /usr/local/* as it should be. And the distribution maintainers rejoiced...

20070203: Applied patch #1650853 - navi buttons +new class - thanks to loh_tar for the patch
           
