@@ -208,5 +208,8 @@
 20070203: Changed all the installation paths from /usr/* to /usr/local/* as it should be. And the distribution maintainers rejoiced...
 
 20070203: Applied patch #1650853 - navi buttons +new class - thanks to loh_tar for the patch
+
+20070204: Fixed bug #1637749 - chart objects are lost when placed on diff. indi. screens.
+
            
 
